refactor: 清理历史代码，突出 Non-Compact Path 对接逻辑
- 删除 30+ 个历史 Java 测试文件
- 删除 11 个历史 C 实现文件
- 保留核心对接代码：FastBigDecimalMKL.java + km_math_mkl.c
- 添加微服务场景验证：MicroserviceStressTest.java
- 更新 README.md 说明项目结构和性能验证结果

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>